fixed issue with overflow of squares

--- a/style.css
+++ b/style.css
@@ -8,19 +8,31 @@ body {
 }
 
 .container {
-    margin: 100px 300px;
+    
     display: flex;
     flex-direction: column;
-    border: #6495ED 10px solid;
+    
+    width: 600px;
+    height: 600px;
+}
+
+.border {
+    margin: 100px 300px;
+    padding: 0;
+    border: 5px solid #6495ED;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
 }
 
 .row {
     display: flex;
+    overflow: hidden;
 }
 
 .gridSquare {
-    width: 50px;
-    height: 50px;
+    border: 1px solid black;
+   
 }
 
 .header {
@@ -45,16 +57,16 @@ body {
 
 .content {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
 }
 
 .settings {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-around;
     gap: 10px;
-    margin-top: 100px;
+    margin-left: 50px;
     font-size: 24px;
 }
